@@ -57,7 +57,8 @@ void (*pin_draw_func)() = o_pin_recalc;
 void (*select_func)() = NULL;
 void (*x_log_update_func)() = NULL;
 void (*quit_func)() = gnetlist_quit;
-void (*variable_set_func)() = i_vars_set;
+/* void (*variable_set_func)() = i_vars_set; */
+void (*variable_set_func)() = NULL;
 
 /* netlist specific variables */
 NETLIST *netlist_head=NULL;
