@@ -55,7 +55,8 @@ void (*pin_draw_func)() = o_pin_recalc;
 void (*select_func)() = NULL;
 void (*x_log_update_func)() = s_log_update;
 void (*quit_func)() = gsymcheck_quit;
-void (*variable_set_func)() = i_vars_set;
+/* void (*variable_set_func)() = i_vars_set; */
+void (*variable_set_func)() = NULL;
 
 /* command line arguments */
 int verbose_mode=FALSE;
