@@ -1,3 +1,8 @@
+2005-02-11  Patrick Bernaud  <b-patrick@wanadoo.fr>
+
+	* gschlas/gschlas.c (main_prog): Adapted for new toplevel and page 
+	APIs in libgeda.
+
 2005-02-08 12:15  danmc
 
 	* gschlas/g_register.c, gschlas/gschlas.c, include/prototype.h:
